оптимизация чтения примеров